@@ -21,7 +21,7 @@
         "car-finder >= 1.5.2",
         "ColorCodedPlanners >= 1.0.1",
         "ConfigLampTimes >= 0.0.5",
-        "ConstructionPlanner >= 1.0.5",
+        "ConstructionPlannerContinued >= 1.1.0",
         "CopyPasteModules >= 0.1.1",
         "CursorEnhancements >= 1.2.3",
         "EditorExtensions >= 1.13.4",
@@ -44,7 +44,7 @@
         "QueueToFrontNG >= 0.18.3",
         "QuickItemSearch >= 2.1.4",
         "QuickbarTemplates >= 2.2.0",
-        "QuickSwap >= 0.0.1",
+        "quickbar-vertical-swap >= 1.0.0",
         "RateCalculator >= 2.4.4",
         "RealisticFlashlight >= 0.2.4",
         "RecipeBook >= 3.4.5",
