@@ -2,6 +2,8 @@
 Version: 999.999.999
 Date: 9999-99-99
   Changes:
+    - Replaced "Construction Planner" with "Construction Planner Continued" mod. Although it should be a drop-in replacement, make sure to backup the savegame before updating the modpack.
+    - Replaced "Quick Swap" with "Quickbar Vertical Swap" mod. Provides more features, and preserves blueprints on the quickbar (by default).
   Features:
   Bugfixes:
 ---------------------------------------------------------------------------------------------------
